--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -10,6 +10,11 @@
 	<body>
 	<div class="container">
 
+	    <nav class="navbar navbar-default" role="navigation">
+	        <a class="navbar-brand" href="/">Superlists</a>
+	        <a class="btn navbar-btn navbar-right" id="id_login" href="#">Sign in</a>
+	    </nav>
+
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3 jumbotron">
 				<div class="text-center">
@@ -37,5 +42,15 @@
 	</div>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="/static/list.js"></script>
+
+	<script src="/static/accounts/accounts.js"></script>
+	<script>
+	    $(document).ready(function() {
+
+	        Superlists.Accounts.initialize(navigator)
+
+	    });
+	</script>
+
 	</body>
 </html>
