--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -41,13 +41,14 @@
 
 	</div>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="https://login.persona.org/include.js"></script>
+	<script src="/static/accounts.js"></script>
 	<script src="/static/list.js"></script>
-
-	<script src="/static/accounts/accounts.js"></script>
 	<script>
+	    /*global $, Superlists, navigator */
 	    $(document).ready(function() {
 
-	        Superlists.Accounts.initialize(navigator)
+	        Superlists.Accounts.initialize(navigator);
 
 	    });
 	</script>
